src/objects/cscrm__Address__c.object
<CustomObject>
    <description>The Address object holds details of addresses associated with an Account.  An Address can be used for multiple purposes. In a B2B example an Address could be all of the following:
- the registered office address for the Account;
- the billing address; and
- an installation address for a specific technical service.</description>
    <fields>
        <fullName>Consulting_ID__c</fullName>
        <description>Consulting ID</description>
        <inlineHelpText>Consulting ID</inlineHelpText>
        <label>Consulting-ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Type__c</fullName>
        <description>Delivery Type information at premises</description>
        <label>Delivery Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HFC</fullName>
                </value>
                <value>
                    <fullName>FTTP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estimated_ICOMS_ID__c</fullName>
        <description>New Estimated ICOMS ID” field will be populated from Quantum Attribute object if SITE ID = 0 from DNA Services</description>
        <label>LG_EstimatedICOMSID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GNV__c</fullName>
        <label>GNV</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Erforderlich</fullName>
                </value>
                <value>
                    <fullName>Nicht erforderlich</fullName>
                </value>
                <value>
                    <fullName>Wird nachgereicht</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_AddressID__c</fullName>
        <description>US SFDT-54 - This field contains the address ID for the address coming from Peal Integration</description>
        <label>Address ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_AddressString__c</fullName>
        <label>Address String</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_COAXConnectionLocation__c</fullName>
        <label>COAX Connection Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LG_DWHExternalID__c</fullName>
        <description>External Id used for DWH integration.</description>
        <externalId>true</externalId>
        <label>DWH External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Footprint__c</fullName>
        <label>Footprint</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>UPC</fullName>
                </value>
                <value>
                    <fullName>Ziggo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_FullAddressDetails__c</fullName>
        <formula>IF( ISBLANK(cscrm__Street__c) , &apos;&apos;, cscrm__Street__c) + 
IF( ISBLANK(LG_HouseNumber__c) , &apos;&apos;, &apos; &apos; + LG_HouseNumber__c) + 
IF( ISBLANK(LG_HouseNumberExtension__c) , &apos;&apos;, &apos; &apos; + LG_HouseNumberExtension__c + &apos;,&apos;) + 
IF( ISBLANK(cscrm__Zip_Postal_Code__c) , &apos;&apos;, &apos; &apos; + cscrm__Zip_Postal_Code__c) + 
IF( ISBLANK(cscrm__City__c) , &apos;&apos;, &apos; &apos; + cscrm__City__c) + 
IF( ISBLANK(cscrm__Country__c), &apos;&apos;, &apos;, &apos; + cscrm__Country__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Address Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_HouseNumberExtension__c</fullName>
        <description>US SFDT-54 - House Number extension data</description>
        <label>House Number Extension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_HouseNumber__c</fullName>
        <description>Standard House Number</description>
        <label>House Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Icomms_Premise_ID__c</fullName>
        <label>ICOMS Premise ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Icomms_Site_ID__c</fullName>
        <label>ICOMS Site ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_PremiseNumber__c</fullName>
        <displayFormat>P{0000000}</displayFormat>
        <label>Premise Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>LG_Quantum_Site_Name__c</fullName>
        <label>Quantum Site Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_SUNIDADDRESSMAP__c</fullName>
        <formula>if(ISBLANK(LG_Quantum_Site_Name__c),&apos;&apos;,LG_Quantum_Site_Name__c+&apos;,&apos;)+if(ISBLANK( cscrm__Building_Number__c ),&apos;&apos;,cscrm__Building_Number__c +&apos;,&apos;)+if(ISBLANK(cscrm__Building_Name__c),&apos;&apos;,cscrm__Building_Name__c+&apos;,&apos;)+if(ISBLANK(cscrm__Street__c),&apos;&apos;,cscrm__Street__c+&apos;,&apos;)+if(ISBLANK(cscrm__City__c),&apos;&apos;,cscrm__City__c+&apos;,&apos;)+if(ISBLANK(cscrm__Country__c),&apos;&apos;,cscrm__Country__c+&apos;,&apos;)+if(ISBLANK(cscrm__Zip_Postal_Code__c),&apos;&apos;,cscrm__Zip_Postal_Code__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SUNIDADDRESSMAP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_ServiceabilityCopperCategory__c</fullName>
        <label>Serviceability Copper Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_ServiceabilityHFCCategory__c</fullName>
        <label>Serviceability HFC Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_SharedOfficeBuilding__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shared Office Building</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_TechnicalContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Technical Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.cscrm__Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Premises</relationshipLabel>
        <relationshipName>Premises</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LG_UPRN__c</fullName>
        <label>UPRN</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_UniqueKeyForm__c</fullName>
        <description>Used in trigger context, as LG_UniqueKey__c field is updated by Workflow...</description>
        <formula>cscrm__Account__c + cscrm__Zip_Postal_Code__c + LG_HouseNumber__c + LG_HouseNumberExtension__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique Key Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Uniquekey__c</fullName>
        <description>Account ID  + PostalCode + HouseNo + Extension</description>
        <externalId>true</externalId>
        <label>Unique key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>UM_AddressValidated__c</fullName>
        <description>Is checked if both AddressId and GeoCoordinate fields are populated</description>
        <formula>Not(ISBLANK( LG_AddressID__c )) || NOT(ISBLANK( cscrm__Geolocation__c ))</formula>
        <label>Address Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VM_ONUNumber__c</fullName>
        <description>ONU Number</description>
        <label>ONU Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cscrm__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Addresses</relationshipLabel>
        <relationshipName>Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cscrm__Address_Details__c</fullName>
        <formula>IF( ISBLANK(cscrm__Street__c) , &apos;&apos;, cscrm__Street__c +&apos;,&apos;) + 
IF( ISBLANK(cscrm__State_Province__c) , &apos;&apos;, &apos; &apos; + cscrm__State_Province__c +&apos;,&apos;) + 
IF( ISBLANK(cscrm__City__c) , &apos;&apos;, &apos; &apos; + cscrm__City__c +&apos;,&apos;) + 
IF( ISBLANK(cscrm__Zip_Postal_Code__c) , &apos;&apos;, &apos; &apos; + cscrm__Zip_Postal_Code__c +&apos;,&apos;) + 
IF( ISBLANK(cscrm__Country__c) , &apos;&apos;, &apos; &apos; + cscrm__Country__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cscrm__Address_Type__c</fullName>
        <label>Address Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Street</fullName>
                </value>
                <value>
                    <fullName>Rural</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cscrm__Building_Name__c</fullName>
        <label>Building Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cscrm__Building_Number__c</fullName>
        <label>Building Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cscrm__Building_Type__c</fullName>
        <label>Building Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Building</fullName>
                </value>
                <value>
                    <fullName>Block</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cscrm__City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cscrm__Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cscrm__External_Address_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Address Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>cscrm__External_ID__c</fullName>
        <description>The ID of this Address in an external address database.</description>
        <inlineHelpText>The ID of this Address in an external address database.</inlineHelpText>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cscrm__Geolocation__c</fullName>
        <description>The latitude/longitude coordinates of this address.</description>
        <inlineHelpText>The latitude/longitude coordinates of this address.</inlineHelpText>
        <label>Geolocation</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>cscrm__Is_Billing_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Billing Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cscrm__Is_Installation_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Installation Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cscrm__Is_Registered_Office_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Registered Office Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cscrm__Is_Shipping_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Shipping Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cscrm__Level_Number__c</fullName>
        <label>Level Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cscrm__Level_Type__c</fullName>
        <label>Level Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Floor</fullName>
                </value>
                <value>
                    <fullName>Level</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cscrm__Plan_Number__c</fullName>
        <label>Plan Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cscrm__Property_Name__c</fullName>
        <label>Property Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cscrm__State_Province__c</fullName>
        <label>State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cscrm__Street_Name__c</fullName>
        <label>Street Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cscrm__Street_Number_End__c</fullName>
        <label>Street Number End</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cscrm__Street_Number_Start__c</fullName>
        <label>Street Number Start</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cscrm__Street_Type__c</fullName>
        <label>Street Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Street</fullName>
                </value>
                <value>
                    <fullName>Road</fullName>
                </value>
                <value>
                    <fullName>Avenue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cscrm__Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cscrm__Unit_Number__c</fullName>
        <label>Unit Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cscrm__Unit_Type__c</fullName>
        <label>Unit Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Suite</fullName>
                </value>
                <value>
                    <fullName>Room</fullName>
                </value>
                <value>
                    <fullName>Office</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cscrm__Zip_Postal_Code__c</fullName>
        <label>Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Address</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>cscrm__Address_Details__c</columns>
        <columns>cscrm__Country__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LG_AddressID__c</columns>
        <columns>cscrm__Geolocation__Latitude__s</columns>
        <columns>cscrm__Geolocation__Longitude__s</columns>
        <columns>cscrm__State_Province__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>cscrm__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Address Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>